--- a/index.html
+++ b/index.html
@@ -333,6 +333,24 @@
     line-height: 1.75;
   }
 
+  .method-footer {
+    margin-top: 2.5rem;
+  }
+
+  .method-footer p {
+    font-family: 'Cormorant Garamond', Georgia, serif;
+    font-style: italic;
+    font-weight: 300;
+    font-size: 1.05rem;
+    color: var(--gold-dim);
+    letter-spacing: 0.02em;
+  }
+
+  .method-step:has(.step-content h3:only-child) {
+    align-items: center;
+    padding: 1.6rem 0;
+  }
+
   /* ── Access / Contact ── */
   .access-section {
     background: var(--navy);
@@ -464,8 +482,8 @@
 <!-- Hero -->
 <section class="hero">
   <div class="hero-ornament"></div>
-  <h1>Private introductions.<br>Considered alignment.</h1>
-  <p>We introduce selectively and deliberately, where preparation has been completed, intent is understood, and both parties are ready for consequence.</p>
+  <h1>Private Introductions.<br>Considered Alignment.</h1>
+  <p>We introduce where we believe alignment exists and consequence has been examined.</p>
   <div class="hero-rule"></div>
 </section>
 
@@ -474,11 +492,11 @@
   <div class="container">
     <div class="reveal">
       <div class="section-label">Philosophy</div>
-      <h2>Considered introductions<br>where alignment already exists.</h2>
-      <p class="philosophy-lead">Reputation compounds. So does error.</p>
-      <p>We introduce selectively and deliberately. We do not broker transactions, circulate lists, or operate at volume. Every engagement begins with a private assessment of alignment and intent.</p>
-      <p>If we introduce, preparation has been completed and both parties understand consequence. We do not publish client names or publicise outcomes.</p>
-      <p class="philosophy-coda">Trust is cumulative — and remains personal.</p>
+      <h2>Reputation compounds.</h2>
+      <p>We facilitate private introductions where we believe alignment exists. Preparation matters. Intent matters. Timing matters.</p>
+      <p>We are not brokers. We do not circulate opportunities. We do not operate at volume.</p>
+      <p>If we introduce, it is because both parties are prepared and understand what follows.</p>
+      <p class="philosophy-coda">Trust is cumulative. It remains personal.</p>
     </div>
   </div>
 </section>
@@ -488,26 +506,10 @@
   <div class="container">
     <div class="reveal">
       <div class="section-label">Scope</div>
-      <h2>Narrow by design</h2>
-      <p>Meaningful introductions where context, timing, and intent are already aligned. We do not facilitate speculative outreach or exploratory volume networking.</p>
-    </div>
-    <div class="scope-grid">
-      <div class="scope-item reveal">
-        <h3>Founder-Led Companies</h3>
-        <p>Strategic relationships beyond existing networks — for principals building with long-term consequence in mind.</p>
-      </div>
-      <div class="scope-item reveal">
-        <h3>Established Organisations</h3>
-        <p>Discreet access to decision-makers where conventional channels prove insufficient or inappropriate.</p>
-      </div>
-      <div class="scope-item reveal">
-        <h3>Investors & Principals</h3>
-        <p>Aligned private opportunities explored with care — where both parties share intent and understand context.</p>
-      </div>
-      <div class="scope-item reveal">
-        <h3>Private Individuals</h3>
-        <p>Considered introductions of substance for high-net-worth individuals seeking relationships that merit the time invested.</p>
-      </div>
+      <h2>Selective by design.</h2>
+      <p>We introduce principals where context, intent and long-term consequence are aligned.</p>
+      <p>We do not conduct speculative outreach. We do not facilitate exploratory networking. We do not introduce for curiosity.</p>
+      <p class="philosophy-coda">Engagement is deliberate.</p>
     </div>
   </div>
 </section>
@@ -517,38 +519,36 @@
   <div class="container">
     <div class="reveal">
       <div class="section-label">Method</div>
-      <h2>Deliberate and contained</h2>
-      <p>We remain available where appropriate to support continuity, but we do not manage negotiations or commercial execution.</p>
+      <h2>Our process is deliberate<br>and contained.</h2>
     </div>
     <div class="method-steps">
       <div class="method-step reveal">
         <div class="step-number">01</div>
         <div class="step-content">
-          <h3>Assessment</h3>
-          <p>Each engagement begins with a confidential discussion to understand objectives, constraints, and long-term intent.</p>
+          <h3>Initial Confidential Discussion</h3>
         </div>
       </div>
       <div class="method-step reveal">
         <div class="step-number">02</div>
         <div class="step-content">
-          <h3>Qualification</h3>
-          <p>We assess alignment privately across both sides before any approach is made.</p>
+          <h3>Private Assessment of Alignment</h3>
         </div>
       </div>
       <div class="method-step reveal">
         <div class="step-number">03</div>
         <div class="step-content">
-          <h3>Preparation</h3>
-          <p>Context is established in advance. Expectations are clear. No surprises.</p>
+          <h3>Preparation in Advance</h3>
         </div>
       </div>
       <div class="method-step reveal">
         <div class="step-number">04</div>
         <div class="step-content">
-          <h3>Introduction</h3>
-          <p>When introduced, both parties are prepared, informed, and aligned in principle.</p>
+          <h3>Considered Introduction</h3>
         </div>
       </div>
+    </div>
+    <div class="reveal method-footer">
+      <p>We manage the relationship. We do not manage negotiation or execution.</p>
     </div>
   </div>
 </section>
@@ -558,9 +558,9 @@
   <div class="container">
     <div class="access-inner reveal">
       <div class="section-label">Access</div>
-      <h2>By referral or<br>private approach</h2>
-      <p>We accept a limited number of retained engagements at any given time. All conversations begin confidentially. Engagement is selective.</p>
-      <p class="access-coda">If alignment exists, we proceed. If not, we decline respectfully.</p>
+      <h2>By referral or<br>private approach.</h2>
+      <p>Capacity is limited.</p>
+      <p class="access-coda">If alignment exists, we proceed. If it does not, we decline respectfully.</p>
       <a href="mailto:enquiries@woodassociates.com" class="access-link">
         <span>Request an Introduction</span>
       </a>
